# investigation-python

./: .replit  CMakeLists.txt  Main.cpp  README.md
src/: BaseObject.cpp  BaseObject.h  BirdAdapter.cpp  BirdAdapter.h  BoxOfObjects.cpp  BoxOfObjects.h  CMakeLists.txt  Headphones.cpp  Headphones.h  IBaseObject.h  IRealDuck.h  IToyDuck.h  Mouse.cpp  Mouse.h  Pen.cpp  Pen.h  RealDuck.cpp  RealDuck.h  Scissors.cpp  Scissors.h  ToyDuck.cpp  ToyDuck.h  main.cpp
